[build-system]
requires = [
    "setuptools >= 35.0.2",
    "setuptools_scm >= 2.0.0, <3"
]
build-backend = "setuptools.build_meta"

[tool.dephell]
name = "edgewise"
version = "0.1.0"
description = "An Active Record ORM for EdgeDB"
authors = ["Tyler Matteson <tyler@agritheory.com>"]
readme = 'readme.md'
repository = 'https://gitlab.com/agritheory/edgewise'
license = 'Apache License, Version 2.0'
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python",
]

[tool.dephell.dependencies]
python = "^3.6"
edgedb = "^0.7.1"
attrs = "^19.3.0"
python-dotenv = "^0.11.0"
quart = "^0.11.2"

[tool.dephell.dev-dependencies]
pytest = "^4.6"
pytest-cov = "^2.8.1"
mypy = "^0.761"
pytest-mypy = "^0.4.2"
black = "^19.*"
isort = "^4.3.21"
tox = "^3.14.3"
typer = "^0.0.8"
poetry = "^1.0.3"
pytest-docker = "^0.7.2"

[tool.dephell.scripts]
edgewise = "edgewise.edgewise.cli:console"

[tool.dephell.main]
from = {format = "poetry", path = "pyproject.toml"}
to = {format = "setuppy", path = "setup.py"}

[tool.dephell.pytest]
from = {format = "poetry", path = "pyproject.toml"}
tests = ["tox", "README.md"]
command = "pytest -x tests/"
